@@ -582,6 +582,7 @@
       <class name="test.dataprovider.DataProviderTest"/>
       <class name="test.dataprovider.issue1987.IssueTest"/>
       <class name="test.dataprovider.InterceptorTest"/>
+      <class name="test.dataprovider.issue2255.IssueTest"/>
     </classes>
   </test>
 
